// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/marketplace/ doesn't show web marketplace banner in FeatureFlags.StreamlinedMarketplace for Cloud 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal streamlined-marketplace"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className="divider"
      componentClass="div"
    >
      <div
        className="genericModalError"
      >
        <i
          className="icon icon-alert-outline"
        />
        <span>
          Error connecting to the marketplace server. Please check your settings in the 
          <Link
            key=".1"
            to="/admin_console/plugins/plugin_management"
          >
            System Console
          </Link>
          .
        </span>
      </div>
      <div
        className="GenericModal__body"
      >
        <LoadingScreen
          className="loading"
        />
      </div>
    </ModalBody>
  </div>
</Modal>
`;

exports[`components/marketplace/ hides search, shows web marketplace banner in FeatureFlags.StreamlinedMarketplace 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal streamlined-marketplace with-web-marketplace-link"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className="divider"
      componentClass="div"
    >
      <div
        className="genericModalError"
      >
        <i
          className="icon icon-alert-outline"
        />
        <span>
          Error connecting to the marketplace server. Please check your settings in the 
          <Link
            key=".1"
            to="/admin_console/plugins/plugin_management"
          >
            System Console
          </Link>
          .
        </span>
      </div>
      <div
        className="GenericModal__body"
      >
        <LoadingScreen
          className="loading"
        />
      </div>
    </ModalBody>
    <WebMarketplaceBanner />
  </div>
</Modal>
`;

exports[`components/marketplace/ should render default 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
        <ForwardRef
          autoFocus={true}
          clearable={true}
          containerClassName="marketplace-modal-search"
          id="searchMarketplaceTextbox"
          inputClassName="search_input"
          inputPrefix={
            <MagnifyIcon
              size={24}
            />
          }
          inputSize="large"
          name="searchMarketplaceTextbox"
          onChange={[Function]}
          onClear={[Function]}
          placeholder="Search marketplace"
          type="text"
          useLegend={false}
          value=""
        />
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className=""
      componentClass="div"
    >
      <div
        className="GenericModal__body"
      >
        <Uncontrolled(Tabs)
          activeKey="all"
          className="tabs"
          defaultActiveKey="all"
          id="marketplaceTabs"
          onSelect={[Function]}
          unmountOnExit={true}
        >
          <Tab
            eventKey="all"
            title="All"
          >
            <LoadingScreen
              className="loading"
            />
          </Tab>
          <Tab
            eventKey="installed"
            title="Installed (0)"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={Array []}
              noResultsAction={
                Object {
                  "label": "Install plugins",
                  "onClick": [Function],
                }
              }
              noResultsMessage="No plugins installed found"
              page={0}
            />
          </Tab>
        </Uncontrolled(Tabs)>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="divider"
      componentClass="div"
    >
      <FooterPagination
        itemsPerPage={15}
        onNextPage={[Function]}
        onPreviousPage={[Function]}
        page={0}
        total={0}
      />
    </ModalFooter>
  </div>
</Modal>
`;

exports[`components/marketplace/ should render with error banner 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
        <ForwardRef
          autoFocus={true}
          clearable={true}
          containerClassName="marketplace-modal-search"
          id="searchMarketplaceTextbox"
          inputClassName="search_input"
          inputPrefix={
            <MagnifyIcon
              size={24}
            />
          }
          inputSize="large"
          name="searchMarketplaceTextbox"
          onChange={[Function]}
          onClear={[Function]}
          placeholder="Search marketplace"
          type="text"
          useLegend={false}
          value=""
        />
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className=""
      componentClass="div"
    >
      <div
        className="genericModalError"
      >
        <i
          className="icon icon-alert-outline"
        />
        <span>
          Error connecting to the marketplace server. Please check your settings in the 
          <Link
            key=".1"
            to="/admin_console/plugins/plugin_management"
          >
            System Console
          </Link>
          .
        </span>
      </div>
      <div
        className="GenericModal__body"
      >
        <Uncontrolled(Tabs)
          activeKey="all"
          className="tabs"
          defaultActiveKey="all"
          id="marketplaceTabs"
          onSelect={[Function]}
          unmountOnExit={true}
        >
          <Tab
            eventKey="all"
            title="All"
          >
            <LoadingScreen
              className="loading"
            />
          </Tab>
          <Tab
            eventKey="installed"
            title="Installed (0)"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={Array []}
              noResultsAction={
                Object {
                  "label": "Install plugins",
                  "onClick": [Function],
                }
              }
              noResultsMessage="No plugins installed found"
              page={0}
            />
          </Tab>
        </Uncontrolled(Tabs)>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="divider"
      componentClass="div"
    >
      <FooterPagination
        itemsPerPage={15}
        onNextPage={[Function]}
        onPreviousPage={[Function]}
        page={0}
        total={0}
      />
    </ModalFooter>
  </div>
</Modal>
`;

exports[`components/marketplace/ should render with no plugins available 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
        <ForwardRef
          autoFocus={true}
          clearable={true}
          containerClassName="marketplace-modal-search"
          id="searchMarketplaceTextbox"
          inputClassName="search_input"
          inputPrefix={
            <MagnifyIcon
              size={24}
            />
          }
          inputSize="large"
          name="searchMarketplaceTextbox"
          onChange={[Function]}
          onClear={[Function]}
          placeholder="Search marketplace"
          type="text"
          useLegend={false}
          value=""
        />
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className=""
      componentClass="div"
    >
      <div
        className="GenericModal__body"
      >
        <Uncontrolled(Tabs)
          activeKey="all"
          className="tabs"
          defaultActiveKey="all"
          id="marketplaceTabs"
          onSelect={[Function]}
          unmountOnExit={true}
        >
          <Tab
            eventKey="all"
            title="All"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={Array []}
              noResultsMessage="No plugins found"
              page={0}
            />
          </Tab>
          <Tab
            eventKey="installed"
            title="Installed (0)"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={Array []}
              noResultsAction={
                Object {
                  "label": "Install plugins",
                  "onClick": [Function],
                }
              }
              noResultsMessage="No plugins installed found"
              page={0}
            />
          </Tab>
        </Uncontrolled(Tabs)>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="divider"
      componentClass="div"
    >
      <FooterPagination
        itemsPerPage={15}
        onNextPage={[Function]}
        onPreviousPage={[Function]}
        page={0}
        total={0}
      />
    </ModalFooter>
  </div>
</Modal>
`;

exports[`components/marketplace/ should render with plugins available 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
        <ForwardRef
          autoFocus={true}
          clearable={true}
          containerClassName="marketplace-modal-search"
          id="searchMarketplaceTextbox"
          inputClassName="search_input"
          inputPrefix={
            <MagnifyIcon
              size={24}
            />
          }
          inputSize="large"
          name="searchMarketplaceTextbox"
          onChange={[Function]}
          onClear={[Function]}
          placeholder="Search marketplace"
          type="text"
          useLegend={false}
          value=""
        />
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className=""
      componentClass="div"
    >
      <div
        className="GenericModal__body"
      >
        <Uncontrolled(Tabs)
          activeKey="all"
          className="tabs"
          defaultActiveKey="all"
          id="marketplaceTabs"
          onSelect={[Function]}
          unmountOnExit={true}
        >
          <Tab
            eventKey="all"
            title="All"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={
                Array [
                  Object {
                    "author_type": "mattermost",
                    "download_url": "https://github.com/mattermost/mattermost-plugin-nps/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
                    "enterprise": false,
                    "homepage_url": "https://github.com/mattermost/mattermost-plugin-nps",
                    "installed_version": "",
                    "manifest": Object {
                      "description": "This plugin sends quarterly user satisfaction surveys to gather feedback and help improve Mattermost",
                      "id": "com.mattermost.nps",
                      "min_server_version": "5.14.0",
                      "name": "User Satisfaction Surveys",
                      "version": "1.0.3",
                    },
                    "release_stage": "production",
                  },
                ]
              }
              noResultsMessage="No plugins found"
              page={0}
            />
          </Tab>
          <Tab
            eventKey="installed"
            title="Installed (0)"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={Array []}
              noResultsAction={
                Object {
                  "label": "Install plugins",
                  "onClick": [Function],
                }
              }
              noResultsMessage="No plugins installed found"
              page={0}
            />
          </Tab>
        </Uncontrolled(Tabs)>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="divider"
      componentClass="div"
    >
      <FooterPagination
        itemsPerPage={15}
        onNextPage={[Function]}
        onPreviousPage={[Function]}
        page={0}
        total={1}
      />
    </ModalFooter>
  </div>
</Modal>
`;

exports[`components/marketplace/ should render with plugins installed 1`] = `
<Modal
  animation={true}
  aria-label="App Marketplace"
  aria-labelledby="genericModalLabel"
  aria-modal="true"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="marketplace-modal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="none"
  show={true}
>
  <div
    className="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <div
        className="GenericModal__header__text_container"
      >
        <div
          className="GenericModal__header"
        >
          <h1
            className="modal-title"
            id="genericModalLabel"
          >
            App Marketplace
          </h1>
        </div>
        <ForwardRef
          autoFocus={true}
          clearable={true}
          containerClassName="marketplace-modal-search"
          id="searchMarketplaceTextbox"
          inputClassName="search_input"
          inputPrefix={
            <MagnifyIcon
              size={24}
            />
          }
          inputSize="large"
          name="searchMarketplaceTextbox"
          onChange={[Function]}
          onClear={[Function]}
          placeholder="Search marketplace"
          type="text"
          useLegend={false}
          value=""
        />
      </div>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
        <span
          className="sr-only"
        >
          <MemoizedFormattedMessage
            defaultMessage="Close"
            id="generic_modal.close"
          />
        </span>
      </button>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      className=""
      componentClass="div"
    >
      <div
        className="GenericModal__body"
      >
        <Uncontrolled(Tabs)
          activeKey="all"
          className="tabs"
          defaultActiveKey="all"
          id="marketplaceTabs"
          onSelect={[Function]}
          unmountOnExit={true}
        >
          <Tab
            eventKey="all"
            title="All"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={
                Array [
                  Object {
                    "author_type": "mattermost",
                    "download_url": "https://github.com/mattermost/mattermost-plugin-nps/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
                    "enterprise": false,
                    "homepage_url": "https://github.com/mattermost/mattermost-plugin-nps",
                    "installed_version": "",
                    "manifest": Object {
                      "description": "This plugin sends quarterly user satisfaction surveys to gather feedback and help improve Mattermost",
                      "id": "com.mattermost.nps",
                      "min_server_version": "5.14.0",
                      "name": "User Satisfaction Surveys",
                      "version": "1.0.3",
                    },
                    "release_stage": "production",
                  },
                  Object {
                    "author_type": "mattermost",
                    "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
                    "enterprise": false,
                    "homepage_url": "https://github.com/mattermost/mattermost-test",
                    "installed_version": "1.0.3",
                    "manifest": Object {
                      "description": "This plugin is to test",
                      "id": "com.mattermost.test",
                      "min_server_version": "5.14.0",
                      "name": "Test",
                      "version": "1.0.3",
                    },
                    "release_stage": "production",
                  },
                ]
              }
              noResultsMessage="No plugins found"
              page={0}
            />
          </Tab>
          <Tab
            eventKey="installed"
            title="Installed (1)"
          >
            <MarketplaceList
              filter=""
              listRef={
                Object {
                  "current": null,
                }
              }
              listing={
                Array [
                  Object {
                    "author_type": "mattermost",
                    "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
                    "enterprise": false,
                    "homepage_url": "https://github.com/mattermost/mattermost-test",
                    "installed_version": "1.0.3",
                    "manifest": Object {
                      "description": "This plugin is to test",
                      "id": "com.mattermost.test",
                      "min_server_version": "5.14.0",
                      "name": "Test",
                      "version": "1.0.3",
                    },
                    "release_stage": "production",
                  },
                ]
              }
              noResultsAction={
                Object {
                  "label": "Install plugins",
                  "onClick": [Function],
                }
              }
              noResultsMessage="No plugins installed found"
              page={0}
            />
          </Tab>
        </Uncontrolled(Tabs)>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="divider"
      componentClass="div"
    >
      <FooterPagination
        itemsPerPage={15}
        onNextPage={[Function]}
        onPreviousPage={[Function]}
        page={0}
        total={2}
      />
    </ModalFooter>
  </div>
</Modal>
`;
